--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -4,8 +4,34 @@ body {
   width: 100%;
   margin: 0;
   overflow: hidden;
-  font-family: sans-serif;
-  background-color: #e5e5e5;
+  font-family: 'Roboto', sans-serif;
+}
+/* Define classes for each day of the week */
+.day-Monday {
+  background-color: #bb1313!important; 
+}
+
+.day-Tuesday {
+  background-color: #213112!important; 
+}
+
+.day-Wednesday {
+  background-color: #05c505!important; 
+}
+.day-Thursday{
+  background-color: #3bad2c!important; 
+}
+
+.day-Friday {
+  background-color: #bdbdb0!important;
+}
+
+.day-Saturday {
+  background-color: #25b8b8!important;
+}
+
+.day-Sunday {
+  background-color: #112dc9!important;
 }
 
 .app {
@@ -14,9 +40,9 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #fff;
-  border: 0.25rem solid #abcea1;
-  border-radius: 0.5rem;
-  padding: 1rem;
+  border: 0.25rem solid #080808;
+  border-radius: 2rem;
+  padding: 4rem;
   overflow-y: auto;
 }
 
@@ -37,7 +63,7 @@ body {
 }
 
 #todos {
-  display: flex;
+  display: auto;
   flex-direction: column;
   grid-template-columns: 1fr;
   gap: 14px;
@@ -45,7 +71,7 @@ body {
 }
 
 #todos div {
-  border: 3px solid #abcea1;
+  border: 1.5px solid #111111;
   background-color: #e2eede;
   border-radius: 6px;
   padding: 5px;
